--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,14 @@
 .App {
-  text-align: center;
+  width: 66.67%;
+  margin: 3rem auto;
+  padding-top: 2rem;
+
+  background-color: #35a1b2;
+
+  position: relative;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .row-1 {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
