--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -1,8 +1,8 @@
 .Canvas {
-  position:  relative;
-  top: 300px;
-
-  border: 1px solid black;
+  position: relative;
+  width: 80%;
+  height: 10rem;
+  overflow: hidden;
 }
 
 .pen {
@@ -10,9 +10,13 @@
   left: 0;
   top: 0;
   z-index: 1;
+
+  width: 100%;
 }
 
 .draw-area {
+  width: 100%;
+
   position: absolute;
   left: 0;
   top: 0;
